--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Need this for json to/from object -->
+		<!-- Need this for json to/from object 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
@@ -92,7 +92,7 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.4.1.1</version>
-		</dependency>
+		</dependency> -->
 		<!-- 
 		<dependency> 
 			<groupId>com.fasterxml.jackson.core</groupId> 
